[package]
name = "btd"
description = "CLI tool to transform and deploy production builds of projects with file operations and commands."
license = "GPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
edit = "0.1.5"
open = "5.1.2"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
system = "0.3.0"

[build-dependencies]
winres = "0.1.12"
